--- a/each_recipe.html
+++ b/each_recipe.html
@@ -38,6 +38,9 @@
   <!-- New Recipe Modal Container -->
   <div id="add_new_recipe_modal_container"></div>
 
+  <!-- Add category modal -->
+  <div id="add_new_category_modal_container"></div>
+
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
