--- a/addCalories.html
+++ b/addCalories.html
@@ -39,6 +39,8 @@
         <main class="max-w-md mx-auto">
             <!-- Add ingredients modal container -->
             <div id="add_ingredient_modal_container"></div>
+            <!-- Add category modal -->
+            <div id="add_new_category_modal_container"></div>
             <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
                 <h1 class="font-semibold text-xl">Add Calories</h1>
                 <!-- Container for subcategories -->
