--- a/addIngredient.html
+++ b/addIngredient.html
@@ -38,6 +38,9 @@
     <!-- New Recipe Modal Container -->
     <div id="add_new_recipe_modal_container"></div>
 
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
     <!-- Ingredients form -->
     <main class="p-4">
         <h1 class="text-4xl font-bold text-center mb-6" id="ingredientName">placeholder</h1>
