--- a/calories.html
+++ b/calories.html
@@ -35,6 +35,9 @@
     <!-- New Recipe Modal Container -->
     <div id="add_new_recipe_modal_container"></div>
 
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
     <main>
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
