--- a/ingredients.html
+++ b/ingredients.html
@@ -34,6 +34,9 @@
     <!-- New Recipe Modal Container -->
     <div id="add_new_recipe_modal_container"></div>
 
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
     <main>
 
         <!-- Add ingredients modal container -->
