--- a/my_recipes.html
+++ b/my_recipes.html
@@ -26,6 +26,9 @@
     <!-- New Recipe Modal Container -->
     <div id="add_new_recipe_modal_container"></div>
 
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
         <!-- avatar -->
