--- a/overview.html
+++ b/overview.html
@@ -49,9 +49,15 @@
 
     <main class="max-w-md mx-auto">
         <div id="add_ingredient_modal_container"></div>
+
         <!-- New Recipe Modal Container -->
         <div id="add_new_recipe_modal_container"></div>
+
+
         <div class="py-6" id="donut-chart"></div>
+
+        <!-- Add category modal -->
+        <div id="add_new_category_modal_container"></div>
 
         <!-- Calories consumed -->
         <div class="max-w-full rounded overflow-hidden shadow-lg">
