--- a/profile.html
+++ b/profile.html
@@ -50,6 +50,9 @@
         <!-- New Recipe Modal Container -->
         <div id="add_new_recipe_modal_container"></div>
 
+        <!-- Add category modal -->
+        <div id="add_new_category_modal_container"></div>
+
         <form id="user-profile-form">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 <p class="text-center">Welcome! <span id="name"></span></p>
