--- a/overview.html
+++ b/overview.html
@@ -53,8 +53,7 @@
         <!-- New Recipe Modal Container -->
         <div id="add_new_recipe_modal_container"></div>
 
-
-        <div class="py-6" id="donut-chart"></div>
+        <div id="donut-chart"></div>
 
         <!-- Add category modal -->
         <div id="add_new_category_modal_container"></div>
