Updated modal body asking for name

--- a/each_category.html
+++ b/each_category.html
@@ -37,7 +37,7 @@
     <!-- <link rel="stylesheet" href="./styles/style.css"> -->
 </head>
 
-<body class="space-y-16">
+<body class=>
     <!------------------------------>
     <!-- Your HTML Layout go here -->
     <!------------------------------>
@@ -45,7 +45,7 @@
     <!-- our own navbar goes here -->
     <nav id="navbarPlaceholder"></nav>
 
-    <main class="flex flex-col mt-5">
+    <main class="flex flex-col mt-16">
 
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
