--- a/ingredients.html
+++ b/ingredients.html
@@ -107,33 +107,44 @@
         </div>
 
         <!-- modal for ingredient name -->
-        <div id="ingredientModal"
-            class="hidden fixed z-10 left-0 top-0 w-full h-full overflow-auto bg-gray-500 bg-opacity-75">
-            <div class="modal-content container mx-auto p-5 border shadow-lg rounded-md bg-white mt-20">
-                <!-- Modal Header -->
-                <div class="modal-header flex justify-between items-center pb-3">
-                    <p class="text-2xl font-bold">Ingredient Name?</p>
-                    <div class="modal-close cursor-pointer z-50" onclick="toggleModal()">
-                        <span class="text-2xl font-semibold">&times;</span>
-                    </div>
+        <div id="ingredientModal" class="hidden fixed z-10 inset-0 overflow-y-auto">
+            <div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center">
+                <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+                    <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
                 </div>
 
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <form id="newIngredientForm">
-                        <input type="text" id="ingredientName" placeholder="Enter here" required class="input mb-2" />
-                        <button type="button" onclick="submitIngredientName()" class="btn">Proceed</button>
-                    </form>
+                <!-- modal content -->
+                <div
+                    class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                    <div class="bg-blue-700 border border-blue-700 rounded-t-lg px-5 py-2">
+                        <!-- Modal Header -->
+                        <div class="modal-header flex justify-between items-center">
+                            <p class="text-lg font-semibold text-white">Ingredient Name?</p>
+                            <button type="button" class="text-white" onclick="toggleModal()">
+                                <span class="text-2xl py-1">&times;</span>
+                            </button>
+                        </div>
+                    </div>
+                    <!-- Modal Body -->
+                    <div class="p-6">
+                        <form id="newIngredientForm">
+                            <input type="text" id="ingredientName" placeholder="Enter here" required
+                                class="input mb-2 border rounded-lg px-3 py-2 w-full focus:outline-none focus:border-blue-500" />
+                            <button type="button" onclick="submitIngredientName()"
+                                class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                Save
+                            </button>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
-    </main>
 
-    <!-- our own footer goes here-->
-    <nav id="footerPlaceholder"></nav>
-    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-    <script src="./scripts/general_skeleton.js"></script>
-    <script src="./scripts/ingredients.js"></script>
+        <!-- our own footer goes here-->
+        <nav id="footerPlaceholder"></nav>
+        <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+        <script src="./scripts/general_skeleton.js"></script>
+        <script src="./scripts/ingredients.js"></script>
 </body>
 
 </html>
