--- a/exercise_log.html
+++ b/exercise_log.html
@@ -45,6 +45,38 @@
     id="exercise-card-container">
   </div>
 
+  <!-- Edit Exercise Modal -->
+  <div id="editExerciseModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full">
+    <!-- Modal content -->
+    <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
+      <div class="mt-3 text-center">
+        <div><b>Edit Exercise</b></div>
+        <form id="exerciseEditForm">
+          <input type="hidden" id="editActivityId">
+          <div>Name: <input type="text" id="editExerciseName" class="border rounded"></div>
+          <div>Calories Burned: <input type="number" id="editExerciseCalories" class="border rounded"></div>
+          <div>Duration: <input type="text" id="editExerciseDuration" placeholder="HH:MM:SS" class="border rounded"></div>
+          <div class="items-center px-4 py-3">
+            <button id="saveExerciseChanges"
+              class="px-4 py-2 bg-green-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-300">
+              Save changes
+            </button>
+            <button id="deleteExercise"
+              class="mt-3 px-4 py-2 bg-red-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-red-300">
+              Delete
+            </button>
+          </div>
+        </form>
+        <div class="items-center px-4 py-3">
+          <button id="closeModal"
+            class="px-4 py-2 bg-gray-500 text-white text-base font-medium rounded-md w-full shadow-sm hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-gray-300">
+            Close
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- Bottom Navbar -->
   <nav id="footerPlaceholder"></nav>
 
