--- a/addCalories.html
+++ b/addCalories.html
@@ -35,56 +35,86 @@
     <!-- New Recipe Modal Container -->
     <div id="add_new_recipe_modal_container"></div>
 
-    <main class="space-y-4">
-        <main class="max-w-md mx-auto">
-            <!-- Add ingredients modal container -->
-            <div id="add_ingredient_modal_container"></div>
-            <!-- Add category modal -->
-            <div id="add_new_category_modal_container"></div>
-            <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
-                <h1 class="font-semibold text-xl">Add Calories</h1>
-                <!-- Container for subcategories -->
-                <div id="subcategoriesContainer">
-                    <!-- Subcategories will be dynamically added here -->
-                </div>
+    <!-- Add ingredients modal container -->
+    <div id="add_ingredient_modal_container"></div>
+
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
+    <main class="max-w-md mx-auto">
+        <div class="relative bg-white rounded-lg shadow">
+            <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
+                <h3 class="text-lg font-semibold text-gray-900">
+                    Add your meal of the day
+                </h3>
             </div>
+            <!-- Add recipe modal body -->
+            <div class="p-4 md:p-5">
+                <form id="mealInfo">
+                    <div class="container flex-col gap-4 mb-4 ">
+                        <label for="categoriesForMeals" class="block mt-4 text-lg font-medium text-gray-700">Choose
+                            category
+                            of the meal you had</label>
+                        <p class="mt-2 text-sm">(You are choosing from the existing categories you created)</p>
+                        <select id="categoriesForMeals" name="categoriesForMeals" required
+                            class="mt-4 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
+                            <option value="" disabled selected>Choose your meal recipe's category</option>
+                        </select>
 
-            <!-- Container for recipes -->
-            <div class="container flex-col p-4 text-center mx-auto w-[95%] md:w-[75%] space-y-2">
-                <div id="recipesContainer">
-                    <!-- Recipes will be dynamically added here -->
-                </div>
+                        <p class="mt-8 block text-lg font-medium text-gray-700">Choose which recipe you had for your
+                            meal...</p>
+
+                        <select id="meal" name="meal" required
+                            class="mt-3 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
+                            <option value="" disabled selected>recipe</option>
+                            <!-- Your options here -->
+                        </select>
+
+                        <p class="mt-8 block text-lg font-medium text-gray-700">How much did you have compared to
+                            usual?</p>
+                        <select id="quantity" name="quantity" required
+                            class="mt-5 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
+                            <option value="" disabled selected>quantity</option>
+                            <option value="1/4">One Fourth (1/4)</option>
+                            <option value="1/2">Half (1/2)</option>
+                            <option value="3/4">Three Fourth (3/4)</option>
+                            <option value="1">One (1)</option>
+                            <option value="1 1/4">One and One Fourth (1 1/4)</option>
+                            <option value="1 1/2">One and Half (1 1/2)</option>
+                            <option value="1 3/4">One and Three Fourth (1 3/4)</option>
+                            <option value="2">Two (2)</option>
+                            <option value="2 1/4">Two and One Fourth (2 1/4)</option>
+                            <option value="2 1/2">Two and Half (2 1/2)</option>
+                            <option value="2 3/4">Two and Three Fourth (2 3/4)</option>
+                            <option value="3">Three (3)</option>
+                            <!-- Add more options as needed -->
+
+                        </select>
+                    </div>
             </div>
+            <button id="addMealButton"
+                class="text-white inline-flex items-center bg-[#2d58b1] hover:bg-[#172d58]focus:ring-2 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-3 text-center m-2">
+                <svg class="me-1 -ms-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd"
+                        d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                        clip-rule="evenodd">
+                    </path>
+                </svg>
+                Add meal
+            </button>
+        </div>
+    </main>
 
-            <!-- Form for selecting fractional amount -->
-            <form id="addCaloriesForm">
-                <label for="fraction">Select Quantity:</label>
-                <select id="recipeFraction">
-                    <option value="1/4">One Fourth</option>
-                    <option value="1/2">Half</option>
-                    <option value="3/4">Three Fourth</option>
-                    <option value="1">One</option>
-                    <option value="1 1/4">One and One Fourth</option>
-                    <option value="1 1/2">One and Half</option>
-                    <option value="1 3/4">One and Three Fourth</option>
-                    <option value="2">Two</option>
-                    <option value="2 1/4">Two and One Fourth</option>
-                    <option value="2 1/2">Two and Half</option>
-                    <option value="2 3/4">Two and Three Fourth</option>
-                    <option value="3">Three</option>
-                    <!-- Add more options as needed -->
-                </select>
-            </form>
+    <!-- Bottom Navigation Bar -->
+    <nav id="footerPlaceholder"></nav>
 
-            <!-- Bottom Navigation Bar -->
-            <nav id="footerPlaceholder"></nav>
-
-            <!---------------------------------------------->
-            <!-- Your own JavaScript functions go here    -->
-            <!---------------------------------------------->
-            <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
-            <script src="./scripts/general_skeleton.js"></script>
-            <script src="/scripts/addCalories.js"></script>
+    <!---------------------------------------------->
+    <!-- Your own JavaScript functions go here    -->
+    <!---------------------------------------------->
+    <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="./scripts/general_skeleton.js"></script>
+    <script src="/scripts/addCalories.js"></script>
 
 </body>
 
