--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -9,7 +9,7 @@
     <!-- Add meal-->
     <button id="open_add_new_meal_modal"
       class="mb-6 block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
-      type="button" onclick="loadAddNewMeal()">
+      type="button" onclick="reconnectAddMeal()">
       Record Your Meal
     </button>
     <!-- Add Ingredient modal toggle -->
