Rename the files and delete the unnecessary

--- a/addMeal.html
+++ b/addMeal.html
@@ -45,7 +45,7 @@
         <div class="relative bg-white rounded-lg shadow">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
                 <h3 class="text-lg font-semibold text-gray-900">
-                    Add your meal of the day
+                    Record your meal
                 </h3>
             </div>
             <!-- Add recipe modal body -->
@@ -65,7 +65,8 @@
                             meal...</p>
 
                         <select id="meal" name="meal" required
-                            class="mt-3 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm">
+                            class="mt-3 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm"
+                            placeholder="recipe">
                             <option value="" disabled selected>recipe</option>
                             <!-- Your options here -->
                         </select>
@@ -101,7 +102,7 @@
                         clip-rule="evenodd">
                     </path>
                 </svg>
-                Add meal
+                Record Your Meal
             </button>
         </div>
     </main>
@@ -114,7 +115,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
-    <script src="/scripts/addCalories.js"></script>
+    <script src="/scripts/addMeal.js"></script>
 
 </body>
 
