add more polish to these pages

--- a/my_recipes.html
+++ b/my_recipes.html
@@ -17,7 +17,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 </head>
 
-<body class="flex flex-col space-y-16">
+<body class="space-y-16">
     <!-- top nav bar -->
     <nav id="navbarPlaceholder"></nav>
     <!-- Add ingredients modal container -->
