--- a/overview.html
+++ b/overview.html
@@ -53,6 +53,9 @@
         <!-- New Recipe Modal Container -->
         <div id="add_new_recipe_modal_container"></div>
 
+        <!-- Add quick recipe modal -->
+        <div id="add_quick_meal_modal_container"></div>
+
         <div id="donut-chart"></div>
 
         <!-- Add category modal -->
