--- a/overview.html
+++ b/overview.html
@@ -100,7 +100,7 @@
             </div>
         </div>
         <!-- Calories Burned -->
-        <div class="max-w-full rounded-lg shadow border border-gray-300 overflow-hidden">
+        <div class="max-w-full rounded-lg shadow border border-gray-300 overflow-hidden mt-5 mb-5">
             <div class="px-6 py-4 cursor-pointer flex items-center justify-between bg-gray-50"
                 id="cardHeaderCaloriesBurnt">
                 <p class="flex items-center font-bold text-md"></p>
