Add quick add Meal modal container to all the pages

--- a/addMeal.html
+++ b/addMeal.html
@@ -41,6 +41,9 @@
     <!-- Add category modal -->
     <div id="add_new_category_modal_container"></div>
 
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <main class="max-w-md mx-auto">
         <div class="relative bg-white rounded-lg shadow">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
