--- a/calories.html
+++ b/calories.html
@@ -38,6 +38,9 @@
     <!-- Add category modal -->
     <div id="add_new_category_modal_container"></div>
 
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <main>
         <!-- Add ingredients modal container -->
         <div id="add_ingredient_modal_container"></div>
