--- a/exercise_log.html
+++ b/exercise_log.html
@@ -40,6 +40,9 @@
   <!-- Add category modal -->
   <div id="add_new_category_modal_container"></div>
 
+  <!-- Add quick recipe modal -->
+  <div id="add_quick_meal_modal_container"></div>
+
   <!-- Card Container -->
   <div class="flex flex-col container justify-center items-center mx-auto gap-4 px-4 py-4 md:max-w-[75%]"
     id="exercise-card-container">
