--- a/my_recipes.html
+++ b/my_recipes.html
@@ -29,6 +29,9 @@
     <!-- Add category modal -->
     <div id="add_new_category_modal_container"></div>
 
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <!-- have to link the firebase database to this and then make the graphs work with them. -->
     <main class="overflow-auto" style="height: calc(100vh - 112px);">
         <!-- avatar -->
