--- a/addIngredient.html
+++ b/addIngredient.html
@@ -41,6 +41,9 @@
     <!-- Add category modal -->
     <div id="add_new_category_modal_container"></div>
 
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <!-- Ingredients form -->
     <main class="p-4">
         <h1 class="text-4xl font-bold text-center mb-6" id="ingredientName">placeholder</h1>
