--- a/add_exercise.html
+++ b/add_exercise.html
@@ -35,6 +35,8 @@
   <div id="add_new_recipe_modal_container"></div>
   <!-- Add category modal -->
   <div id="add_new_category_modal_container"></div>
+  <!-- Add quick recipe modal -->
+  <div id="add_quick_meal_modal_container"></div>
 
   <!-- Main Session -->
   <main class="bg-white shadow-2xl mx-auto max-w-full md:max-w-[75%] my-10 rounded-2xl">
