--- a/each_category.html
+++ b/each_category.html
@@ -56,6 +56,9 @@
         <!-- Add category modal -->
         <div id="add_new_category_modal_container"></div>
 
+        <!-- Add quick recipe modal -->
+        <div id="add_quick_meal_modal_container"></div>
+
         <!-- recipe name -->
         <h1 class="font-bold text-5xl m-4 mb-6"><span id="recipeCategory"></span></h1>
 
