--- a/each_recipe.html
+++ b/each_recipe.html
@@ -41,6 +41,9 @@
   <!-- Add category modal -->
   <div id="add_new_category_modal_container"></div>
 
+  <!-- Add quick recipe modal -->
+  <div id="add_quick_meal_modal_container"></div>
+
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
