--- a/goals.html
+++ b/goals.html
@@ -41,6 +41,18 @@
     <!-- Top Nav bar -->
     <nav id="navbarPlaceholder"></nav>
 
+    <!-- Add ingredients modal container -->
+    <div id="add_ingredient_modal_container"></div>
+
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <!-- user info form -->
     <main class="container mx-auto p-4">
         <div class="space-y-8">
