--- a/ingredients.html
+++ b/ingredients.html
@@ -37,6 +37,9 @@
     <!-- Add category modal -->
     <div id="add_new_category_modal_container"></div>
 
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
+
     <main>
 
         <!-- Add ingredients modal container -->
