--- a/profile.html
+++ b/profile.html
@@ -53,6 +53,9 @@
         <!-- Add category modal -->
         <div id="add_new_category_modal_container"></div>
 
+        <!-- Add quick recipe modal -->
+        <div id="add_quick_meal_modal_container"></div>
+
         <form id="user-profile-form">
             <h1 class="text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl">
                 <p class="text-center">Welcome! <span id="name"></span></p>
