--- a/template.html
+++ b/template.html
@@ -50,6 +50,15 @@
 
     <!-- Add ingredients modal container -->
     <div id="add_ingredient_modal_container"></div>
+
+    <!-- New Recipe Modal Container -->
+    <div id="add_new_recipe_modal_container"></div>
+
+    <!-- Add category modal -->
+    <div id="add_new_category_modal_container"></div>
+
+    <!-- Add quick recipe modal -->
+    <div id="add_quick_meal_modal_container"></div>
     <!-- the body of your page goes here -->
     <!-- stuff -->
 
