--- a/goals.html
+++ b/goals.html
@@ -59,7 +59,7 @@
             <h1 class="text-2xl font-semibold">Your Goals</h1>
             <div>
                 <h2 class="text-xl">Current Status</h2>
-                <p>Current Weight: <span id="currentWeight">Loading...</span> kg</p>
+                <p>Current Weight: <span id="currentWeight">Loading...</span></p>
                 <p>Activity Level: <span id="activityLevelText"
                         class="cursor-pointer text-blue-500 hover:text-blue-600">Loading...</span></p>
             </div>
