--- a/meal_log.html
+++ b/meal_log.html
@@ -57,7 +57,7 @@
     <!---------------------------------------------->
     <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
-    <script src="scripts/calories.js"></script>
+    <script src="scripts/meal_log.js"></script>
 
 </body>
 
