--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -38,11 +38,18 @@
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Exercises</a>
         </li>
         <li>
-          <a href="../my_recipes.html"
-            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food
-            Library</a>
+          <a href="../meal_log.html"
+            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Meals you had</a>
         </li>
         <li>
+          <a href="../my_recipes.html"
+            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food Library</a>
+        </li>
+        <li>
+          <a href="../ingredients.html"
+            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Ingredients
+            Library</a>
+        </li>
         <li>
           <a href="../login.html"
             class="block py-2 px-3 text-red-700 rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Logout</a>
