--- a/overview.html
+++ b/overview.html
@@ -48,7 +48,7 @@
     <nav id="navbarPlaceholder"></nav>
 
     <main class="max-w-md mx-auto">
-        <h1 class="text-2xl font-bold text-center my-4">Today's Overview</h1>
+        <h1 class="text-2xl font-bold text-center mt-4">Today's Overview</h1>
         <div id="add_ingredient_modal_container"></div>
 
         <!-- New Recipe Modal Container -->
@@ -57,7 +57,7 @@
         <!-- Add quick recipe modal -->
         <div id="add_quick_meal_modal_container"></div>
 
-        <div class="py-4" id="donut-chart"></div>
+        <div class="pb-4 pt-1" id="donut-chart"></div>
 
         <!-- Add category modal -->
         <div id="add_new_category_modal_container"></div>
@@ -100,7 +100,7 @@
             </div>
         </div>
         <!-- Calories Burned -->
-        <div class="max-w-full rounded-lg shadow border border-gray-300 overflow-hidden mt-5 mb-5">
+        <div class="max-w-full rounded-lg shadow border border-gray-300 overflow-hidden mb-5">
             <div class="px-6 py-4 cursor-pointer flex items-center justify-between bg-gray-50"
                 id="cardHeaderCaloriesBurnt">
                 <p class="flex items-center font-bold text-md"></p>
