--- a/exercise_log.html
+++ b/exercise_log.html
@@ -62,8 +62,8 @@
           <input type="text" id="editExerciseName" class="input-text border rounded p-2 mt-1 text-sm w-full">
         </div>
         <div class="mt-4">
-          <label for="editExerciseCalories" class="text-lg font-bold">Calories Burned:</label>
-          <input type="number" id="editExerciseCalories" class="input-text border rounded p-2 mt-1 text-sm w-full">
+          <label for="editHeartRate" class="text-lg font-bold">Calories Burned:</label>
+          <input type="number" id="editHeartRate" class="input-text border rounded p-2 mt-1 text-sm w-full">
         </div>
         <div class="mt-4">
           <label for="editExerciseDuration" class="text-lg font-bold">Duration:</label>
