Edit edit activity modal

--- a/exercise_log.html
+++ b/exercise_log.html
@@ -52,7 +52,7 @@
   <div id="editExerciseModal"
     class="hidden fixed z-10 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5">
     <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
-      <p class="text-xl font-bold">Edit Workout</p>
+      <p class="text-xl font-bold">Edit Activity</p>
     </div>
     <div class="p-6 pt-0">
       <form id="exerciseEditForm">
