--- a/exercise_log.html
+++ b/exercise_log.html
@@ -62,7 +62,7 @@
           <input type="text" id="editExerciseName" class="input-text border rounded p-2 mt-1 text-sm w-full">
         </div>
         <div class="mt-4">
-          <label for="editHeartRate" class="text-lg font-bold">Calories Burned:</label>
+          <label for="editHeartRate" class="text-lg font-bold">Heart Rate (BPM):</label>
           <input type="number" id="editHeartRate" class="input-text border rounded p-2 mt-1 text-sm w-full">
         </div>
         <div class="mt-4">
