--- a/ingredients.html
+++ b/ingredients.html
@@ -76,14 +76,79 @@
         <div class="flex-col container mx-auto w-[95%] md:w-[75%] mb-20">
             <!-- List existing ingredients-->
             <div id="ingredientsContainer"></div>
-            <!-- Create Your own -->
         </div>
+    </main>
 
-        <!-- our own footer goes here-->
-        <nav id="footerPlaceholder"></nav>
-        <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
-        <script src="./scripts/general_skeleton.js"></script>
-        <script src="./scripts/ingredients.js"></script>
+    <!-- Edit Exercise Modal -->
+    <div id="editIngredientModal"
+        class="hidden fixed z-30 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5 max-h-[75%] overflow-auto ">
+        <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
+            <p class="text-xl font-bold">Edit Ingredient</p>
+        </div>
+        <div class="p-6 pt-0">
+            <form id="ingredientEditForm">
+                <div class="mt-3">
+                    <label for="editIngredientName" class="text-lg font-bold">Name:</label>
+                    <input type="text" id="editIngredientName"
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editCalories" class="text-lg font-bold">Calories (kcal):</label>
+                    <input type="number" step="0.01" id="editCalories"
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editFat" class="text-lg font-bold">Fat (g):</label>
+                    <input type="number" step="0.01" id="editFat" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editCarbs" class="text-lg font-bold">Carbs (g):</label>
+                    <input type="number" step="0.01" id="editCarbs" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editProtein" class="text-lg font-bold">Protein (g):</label>
+                    <input type="number" step="0.01" id="editProtein" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3"><label for="editQuantity" class="text-lg font-bold">Quantity of
+                        ingredient</label>
+                    <input type="number" step="0.01" id="editQuantity" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <select name="editUnit" id="editUnit" class="mt-3 border rounded p-2 text-sm min-w-fit">
+                    <p>unit</p>
+                    <option value="" disabled>unit</option>
+                    <option value="g">g</option>
+                    <option value="ml">ml</option>
+                    <option value="pc">pieces(pc)</option>
+                </select>
+                <div class="flex justify-between items-center mt-6">
+                    <button id="deleteIngredient"
+                        class="bg-red-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-red-300 hover:bg-red-700"
+                        onclick="cancelIngredientChanges()">
+                        Delete
+                    </button>
+                    <button id="cancelIngredientChanges"
+                        class="bg-gray-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-gray-300 hover:bg-gray-700">
+                        Cancel
+                    </button>
+                    <button id="saveIngredientChanges"
+                        class="bg-green-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-green-300 hover:bg-green-700">
+                        Save
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+
+    <!-- our own footer goes here-->
+    <nav id="footerPlaceholder"></nav>
+    <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
+    <script src="./scripts/general_skeleton.js"></script>
+    <script src="./scripts/ingredients.js"></script>
 </body>
 
 </html>
