--- a/ingredients.html
+++ b/ingredients.html
@@ -79,7 +79,7 @@
         </div>
     </main>
 
-    <!-- Edit Exercise Modal -->
+    <!-- Edit Ingredient Modal -->
     <div id="editIngredientModal"
         class="hidden fixed z-30 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5 max-h-[75%] overflow-auto ">
         <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
