--- a/meal_log.html
+++ b/meal_log.html
@@ -48,7 +48,64 @@
             id="food-card-container">
         </div>
     </main>
-
+    <!-- Edit Ingredient Modal -->
+    <div id="editMealModal"
+        class="hidden fixed z-30 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5 max-h-[75%] overflow-auto ">
+        <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
+            <p class="text-xl font-bold">Edit Ingredient</p>
+        </div>
+        <div class="p-6 pt-0">
+            <form id="MealEditForm">
+                <div class="mt-3">
+                    <label for="editMealName" class="text-lg font-bold">Name:</label>
+                    <input type="text" id="editMealName" class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editCalories" class="text-lg font-bold">Calories (kcal):</label>
+                    <input type="number" step="0.01" id="editCalories"
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editFat" class="text-lg font-bold">Fat (g):</label>
+                    <input type="number" step="0.01" id="editFat" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editCarbs" class="text-lg font-bold">Carbs (g):</label>
+                    <input type="number" step="0.01" id="editCarbs" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="editProtein" class="text-lg font-bold">Protein (g):</label>
+                    <input type="number" step="0.01" id="editProtein" placeholder=""
+                        class="input-text border rounded p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="date" class="text-lg font-bold">Date</label>
+                    <input type="text" id="date" disabled class="input-text  p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="mt-3">
+                    <label for="time" class="text-lg font-bold">Time</label>
+                    <input type="text" id="time" disabled class="input-text  p-2 mt-1 text-sm w-full">
+                </div>
+                <div class="flex justify-between items-center mt-6">
+                    <button id="deleteMeal"
+                        class="bg-red-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-red-300 hover:bg-red-700">
+                        Delete
+                    </button>
+                    <button id="cancelMealChanges"
+                        class="bg-gray-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-gray-300 hover:bg-gray-700"
+                        onclick="cancelMealChanges()">
+                        Cancel
+                    </button>
+                    <button id="saveMealChanges"
+                        class="bg-green-500 text-white text-sm px-4 py-2 rounded focus:outline-none focus:ring-2 focus:ring-green-300 hover:bg-green-700">
+                        Save
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
     <!-- Bottom Navigation Bar -->
     <nav id="footerPlaceholder"></nav>
 
