--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -39,7 +39,7 @@
         </li>
         <li>
           <a href="../meal_log.html"
-            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Meals you had</a>
+            class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Meals</a>
         </li>
         <li>
           <a href="../my_recipes.html"
