quick polish changes

--- a/add_exercise.html
+++ b/add_exercise.html
@@ -229,7 +229,7 @@
 
           <!-- Heart Rate -->
           <div class="mb-6">
-            <label class="block text-grey-darker text-lg font-bold mb-2" for="heart_rate">Enter your Heart-rate
+            <label class="block text-grey-darker text-lg font-bold mb-2" for="heart_rate">Enter your Average Heart-rate
               (BPM)</label>
             <input class="shadow appearance-none border rounded w-full py-2 px-3 text-grey-darker" id="heart_rate"
               type="number" placeholder="Heart rate (bpm)" required>
