Fix missing button in general nav bottom

--- a/navbars/general_nav_bottom.html
+++ b/navbars/general_nav_bottom.html
@@ -30,6 +30,12 @@
       type="button" onclick="reconnectAddMeal()">
       Record Your Meal
     </button>
+    <!-- Add quick meal-->
+    <button id="open_add_quick_meal_modal"
+      class="mb-3 block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+      type="button">
+      Add a Quick Meal
+    </button>
     <!-- Add exercise button -->
     <button id="add_new_exercise_button"
       class="mb-6 block bg-slate-100 hover:bg-slate-200 shadow-md focus:ring-4 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
