--- a/overview.html
+++ b/overview.html
@@ -130,6 +130,71 @@
         </div>
     </main>
 
+    <!-- Update Weight Modal -->
+    <div id="updateWeightModal" class="hidden fixed z-10 inset-0 overflow-y-auto">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+            </div>
+            <!-- This element is to trick the browser into centering the modal contents. -->
+            <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+            <div
+                class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full">
+                <div class="bg-blue-500 text-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <h3 class="text-lg leading-6 font-medium text-white" id="modal-title">Update Your Weight</h3>
+                </div>
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <div class="sm:flex sm:items-start">
+                        <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left w-full">
+                            <form id="weightUpdateForm">
+                                <div class="mt-2">
+                                    <label for="updateWeightValue"
+                                        class="block text-sm font-medium text-gray-700">Weight
+                                        (in kg):</label>
+                                    <input type="number" id="updateWeightValue"
+                                        class="input-text border rounded p-2 mt-1 w-full" required>
+                                </div>
+                                <div class="mt-4">
+                                    <button type="button" id="cancelWeightUpdate"
+                                        class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Cancel</button>
+                                    <button type="submit" id="saveWeightUpdate" onclick="updateWeightAndCalories()"
+                                        class="mt-3 w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:mt-0 sm:ml-3 sm:w-auto sm:text-sm">Save</button>
+
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- General Message Modal -->
+    <div id="messageModal" class="hidden fixed z-10 inset-0 overflow-y-auto">
+        <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+            <div class="fixed inset-0 transition-opacity" aria-hidden="true">
+                <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+            </div>
+            <!-- Modal content -->
+            <div
+                class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:align-middle sm:max-w-lg sm:w-full">
+                <!-- Header -->
+                <div class="bg-blue-500 text-white px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <h3 class="text-lg leading-6 font-medium text-white" id="modalMessageTitle">Message</h3>
+                </div>
+                <!-- Body -->
+                <div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+                    <p id="modalMessageContent" class="text-sm text-gray-700"></p>
+                </div>
+                <!-- Footer -->
+                <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+                    <button type="button" id="closeMessageModal"
+                        class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-500 text-base font-medium text-white hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 sm:ml-3 sm:w-auto sm:text-sm">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
 
