Clean and comment the codes

--- a/each_recipe.html
+++ b/each_recipe.html
@@ -47,10 +47,8 @@
   <!-- Main Content -->
   <main class="pb-24 pt-20 max-w-md mx-auto">
     <h1 class="font-bold text-5xl text-center"><span id="recipeName"></span></h1>
-    <!-- Graph area -->
 
-
-    <!-- Macro nutrients displayed in one line below the graph -->
+    <!-- Macro nutrients displayed -->
     <div class="flex justify-between px-4 mt-10">
       <div class="container flex-col text-center">
         <p class="font-semibold">Protein:</p>
