--- a/index.html
+++ b/index.html
@@ -75,24 +75,8 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-[#2d58b1] shadow m-0 sticky bottom-0">
+    <footer class="bg-[#2d58b1] shadow m-0 sticky bottom-0 h-16">
         <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
-            <div class="sm:flex sm:items-center sm:justify-between">
-                <ul class="flex flex-wrap items-center mb-6 text-sm font-medium text-white sm:mb-0 ">
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">About</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
-                    </li>
-                    <li>
-                        <a href="#" class="hover:underline">Contact</a>
-                    </li>
-                </ul>
-            </div>
             <hr class="my-6 border-gray-200 sm:mx-autolg:my-8" />
             <span class="block text-sm text-slate-300 sm:text-center">© 2024 <a href="#" class="hover:underline">DTC06
                     COMP1800</a>. All Rights Reserved.</span>
@@ -106,7 +90,6 @@
     <!-- Link to scripts of your own -->
     <script src="/scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="scripts/signin.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
 </body>
 
 </html>
