--- a/meal_log.html
+++ b/meal_log.html
@@ -48,11 +48,12 @@
             id="food-card-container">
         </div>
     </main>
-    <!-- Edit Ingredient Modal -->
+
+    <!-- Edit Meal Modal -->
     <div id="editMealModal"
         class="hidden fixed z-30 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5 max-h-[75%] overflow-auto ">
         <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
-            <p class="text-xl font-bold">Edit Ingredient</p>
+            <p class="text-xl font-bold">Edit Meal</p>
         </div>
         <div class="p-6 pt-0">
             <form id="MealEditForm">
