--- a/navbars/general_nav_top.html
+++ b/navbars/general_nav_top.html
@@ -1,6 +1,7 @@
 <nav id="general-top-nav" class="fixed top-0 inset-x-0 bg-[#2d58b1] rounded-b-xl z-30">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-2">
 
+    <!-- Back button -->
     <button id="back-btn"
       class="inline-flex items-center justify-center p-2 w-10 h-10 text-sm text-white hover:text-yellow-100">
       <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="40" height="40"
@@ -13,6 +14,7 @@
       </svg>
     </button>
 
+    <!-- Logo -->
     <a href="#" class="flex items-center justify-center mx-auto">
       <img src="/images/FitQuest Logo.svg" class="h-8" alt="Logo" />
       <span class="self-center text-2xl text-white font-semibold whitespace-nowrap">FitQuest</span>
@@ -29,27 +31,33 @@
     <div class="hidden w-full" id="navbar-hamburger">
       <ul class="flex flex-col font-medium mt-4 rounded-lg bg-white">
         <li>
+          <!-- Overview -->
           <a href="../overview.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]"
             aria-current="page">Overview</a>
         </li>
+        <!-- Exercises -->
         <li>
           <a href="../exercise_log.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Exercises</a>
         </li>
+        <!-- Meals -->
         <li>
           <a href="../meal_log.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Meals</a>
         </li>
+        <!-- Food Library -->
         <li>
           <a href="../my_recipes.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food Library</a>
         </li>
+        <!-- Ingredients -->
         <li>
           <a href="../ingredients.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Ingredients
             Library</a>
         </li>
+        <!-- Logout -->
         <li>
           <a href="../login.html"
             class="block py-2 px-3 text-red-700 rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Logout</a>
