--- a/navbars/home_nav_top.html
+++ b/navbars/home_nav_top.html
@@ -15,28 +15,34 @@
     </button>
     <div class="hidden w-full" id="navbar-hamburger">
       <ul class="flex flex-col font-medium mt-4 rounded-lg bg-white">
+        <!-- Overview -->
         <li>
           <a href="../overview.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]"
             aria-current="page">Overview</a>
         </li>
+        <!-- Exercises -->
         <li>
           <a href="../exercise_log.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Exercises</a>
         </li>
+        <!-- Meals -->
         <li>
           <a href="../meal_log.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Meals</a>
         </li>
+        <!-- Food Library -->
         <li>
           <a href="../my_recipes.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Food Library</a>
         </li>
+        <!-- Ingredients -->
         <li>
           <a href="../ingredients.html"
             class="block py-2 px-3 text-[#2d58b1] rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Ingredients
             Library</a>
         </li>
+        <!-- Logout -->
         <li>
           <a href="../login.html"
             class="block py-2 px-3 text-red-700 rounded-md focus:ring-1 hover:focus:ring-[#2d58b1]">Logout</a>
