--- a/overview.html
+++ b/overview.html
@@ -168,7 +168,7 @@
             </div>
         </div>
     </div>
-    
+
     <!-- Goal Calories Adjustment Modal -->
     <div id="goalAdjustmentModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full"
         onclick="closeModal('goalAdjustmentModal')">
@@ -202,9 +202,7 @@
     <!---------------------------------------------->
     <script src="scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="scripts/home_skeleton.js"></script>
-    <script src="scripts/overview_exercise.js"></script>
-    <!-- <script src="./scripts/script.js"></script> -->
-
+    <script src="scripts/overview.js"></script>
 </body>
 
 </html>
