--- a/addMeal.html
+++ b/addMeal.html
@@ -44,6 +44,7 @@
     <!-- Add quick recipe modal -->
     <div id="add_quick_meal_modal_container"></div>
 
+    <!-- Add Meal Form -->
     <main class="max-w-md mx-auto">
         <div class="relative bg-white rounded-lg shadow">
             <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t">
@@ -51,7 +52,6 @@
                     Record your meal
                 </h3>
             </div>
-            <!-- Add recipe modal body -->
             <div class="p-4 md:p-5">
                 <form id="mealInfo">
                     <div class="container flex-col gap-4 mb-4 ">
@@ -71,7 +71,7 @@
                             class="mt-3 block w-full p-2.5 rounded-md border-gray-900 bg-gray-50 shadow-sm focus:border-[#172d58] focus:ring-[#172d58] sm:text-sm"
                             placeholder="recipe">
                             <option value="" disabled selected>recipe</option>
-                            <!-- Your options here -->
+                            <!-- Options will be appended -->
                         </select>
 
                         <p class="mt-8 block text-lg font-medium text-gray-700">How much did you have compared to
@@ -91,8 +91,6 @@
                             <option value="2 1/2">Two and Half (2 1/2)</option>
                             <option value="2 3/4">Two and Three Fourth (2 3/4)</option>
                             <option value="3">Three (3)</option>
-                            <!-- Add more options as needed -->
-
                         </select>
                     </div>
             </div>
