--- a/goals.html
+++ b/goals.html
@@ -79,7 +79,7 @@
         </div>
     </main>
 
-    <!-- modal -->
+    <!-- Activity Level Modal -->
     <div id="activityLevelModal" class="fixed inset-0 bg-gray-600 bg-opacity-50 overflow-y-auto h-full w-full hidden">
         <div class="relative top-20 mx-auto p-5 border w-96 shadow-lg rounded-md bg-white">
             <div class="mt-3 text-center">
