--- a/ingredients.html
+++ b/ingredients.html
@@ -51,7 +51,7 @@
         <form class="flex mx-auto w-full max-w-md px-4 mb-4">
             <label for="simple-search" class="sr-only">Search</label>
             <div class="relative w-full">
-                <div class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
+                <div id="search-button" class="absolute inset-y-0 start-0 flex items-center ps-3 pointer-events-none">
                     <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 18 20">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
