--- a/my_categories.html
+++ b/my_categories.html
@@ -20,6 +20,7 @@
 <body class="space-y-16">
     <!-- top nav bar -->
     <nav id="navbarPlaceholder"></nav>
+
     <!-- Add ingredients modal container -->
     <div id="add_ingredient_modal_container"></div>
 
@@ -44,10 +45,11 @@
         </div>
         <h1 class="text-center p-3 font-sans font-bold text-2xl"><span id="name"></span>'s Recipes</h1>
 
-        <!-- container to store recipe categories and with create your own button at the end -->
+        <!-- Container to append categories -->
         <div id="categories-container" class="max-w-[95%] md:[75%] mx-auto">
         </div>
 
+        <!-- Modal for deleting category -->
         <div id="deleteCategoryModal"
             class="hidden fixed z-30 top-1/4 left-1/2 transform -translate-x-1/2 -translate-y-1/4 bg-white rounded-lg shadow-lg w-4/5 md:w-3/5 lg:w-2/5 max-h-[75%] overflow-auto ">
             <div class="bg-blue-500 text-white py-3 px-6 rounded-t-lg">
@@ -81,7 +83,7 @@
     <!-- Link to scripts of your own -->
     <script src="./scripts/firebaseAPI_TEAMDTC06.js"></script>
     <script src="./scripts/general_skeleton.js"></script>
-    <script src="scripts/my_recipes.js"></script>
+    <script src="scripts/my_categories.js"></script>
 </body>
 
 </html>
