Fix the newly found bugs

--- a/profile.html
+++ b/profile.html
@@ -103,8 +103,8 @@
                         <select id="gender"
                             class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             <option value="" disabled selected>Select your gender</option>
-                            <option>male</option>
-                            <option>female</option>
+                            <option>Male</option>
+                            <option>Female</option>
                         </select>
                     </div>
                 </div>
