--- a/add_exercise.html
+++ b/add_exercise.html
@@ -243,8 +243,7 @@
               class="bg-transparent hover:bg-blue-500 text-[#2d58b1] font-semibold hover:text-white py-2 px-4 border border-[#2d58b1] hover:border-transparent rounded">
               Cancel
             </button>
-            <button id="save" type="submit"
-              class="bg-[#2d58b1] text-white hover:bg-blue-500 font-bold py-2 px-4 rounded">
+            <button id="save" class="bg-[#2d58b1] text-white hover:bg-blue-500 font-bold py-2 px-4 rounded">
               Save
             </button>
           </div>
